--- a/styles/Navbar/logo.css
+++ b/styles/Navbar/logo.css
@@ -15,3 +15,10 @@
 	transform: rotate(30deg);
 	height: 125px;
 }
+
+@media screen and (max-width: 800px) {
+	.navbar-logo-image {
+		height: 75px;
+		padding: 10px;
+	}
+}
